fix Activities thumbnail overflow by making image responsive

--- a/src/styles/home/activities.module.css
+++ b/src/styles/home/activities.module.css
@@ -14,6 +14,8 @@
 .activity img {
   display: block;
   margin: 0 auto;
+  max-width: 100%;
+  height: auto;
 }
 
 .activity p {
